--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.5"
+  },
+  "scripts": {
+    "start": "parcel index.html",
+    "predeploy": "rm -rf dist && parcel build index.html --public-url \"https://stovoy.github.io/shape-collisions\"",
+    "deploy": "gh-pages -d dist"
   }
 }
